# xfce4-places-plugin

./: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build  meson_options.txt  module.xml
panel-plugin/: Makefile.am  button.c  button.h  button.vala  cfg.c  cfg.h  config.vapi  meson.build  model.c  model.h  model_system.c  model_system.h  model_user.c  model_user.h  model_volumes.c  model_volumes.h  model_volumes_notify.c  model_volumes_notify.h  places.c  places.desktop.in  places.desktop.in.in  places.h  places.vala  support.c  support.h  unescape_uri.c  view.c  view.h  view.vapi  xfce4-popup-places.c  xfce4-popup-places.h  xfce4-popup-places.sh  xfce46-compat.c  xfce46-compat.h
po/: ChangeLog  LINGUAS  POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  lv.po  mk.po  (+27 more)
scripts/: po_parser.py  pogen.sh
